_sass/6_layout/_layout.scss
// ==============
// === Layout ===
// ==============

body {
  background-color: $color-dark;
}

.section-wrapper {
  width: 100%;
}

.section {
  margin: 0 auto;
  width: 100%;
  min-width: 350px;
  max-width: 1400px;
  padding: 40px 16px;

  // --- Tablet portrait and up ---
  @include breakpoints(tablet-portrait-up) {
    padding: 50px 32px;
  }

  // --- Tablet and up ---
  @include breakpoints(tablet-landscape-up){
    padding: 80px 32px;
  }

  &-no-padding {
    margin: 0 auto;
    width: 100%;
    min-width: 350px;
    max-width: 1400px;
  }

  &-footer {
    width: 100%;
    min-width: 350px;
    max-width: 1400px;
    padding: 40px 16px;

    // --- Tablet portrait and up ---
    @include breakpoints(tablet-portrait-up) {
      padding: 40px 32px;
    }
  }
  
  // Removing the margin from the last element of .section
  & > *:last-child, 
      input:last-child, 
      textarea:last-child {
    margin-bottom: 0;
  }
}

